# LumaireJ

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  claude.md  docker-compose.yml  policy.json  pyproject.toml  requirements.txt
.claude/commands/: check.md  commit.md  complete-issue.md  fix.md  hotfix.md  new-issue.md  pr.md  review-pr.md  start-work.md
.github/ISSUE_TEMPLATE/: architecture_task.md  bug_report.md  feature_request.md  refactor.md
.github/PULL_REQUEST_TEMPLATE/: github_pull_request_template.md  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  deploy-pages.yml  manual_deploy.yml  project-automation.yml
alembic/: env.py
alembic/versions/: 419a7670b421_initial_migration.py  62a1b2c3d4e5_add_updated_at_to_journal_entries.py  cc53177b8919_add_mood_length_constraint.py
app/: constants.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: journal.py
app/core/: config.py  database.py  exceptions.py
app/crud/: journal.py
app/dependencies/: session.py
app/models/: __init__.py  journal.py
app/schemas/: __init__.py  journal.py
app/static/: index.html  journal.html
docs/adr/: 001-keep-modular-architecture.md
infra/ecs/: task-def.template.json
infra/iam/: ecs-exec-secrets.json  gh-oidc-deploy-policy.json  gh-oidc-trust.json
tests/: conftest.py  test_config.py  test_exception_handlers.py  test_journal.py  test_schemas.py
