[project]
name = "LumaireJ"
version = "0.1.0"
description = "A journaling app for emotional self-awareness and reflection"
authors = [
    {name = "Darli Ro", email = "glicerinn@gmail.com"},
]
dependencies = ["fastapi>=0.116.0", "uvicorn>=0.35.0", "pydantic-settings>=2.10.1", "python-dotenv>=1.1.1", "sqlmodel>=0.0.24"]
requires-python = "==3.13.*"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload"
lint = "ruff check ."
format = "ruff format ."
test = "pytest"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
exclude = ["__pypackages__", ".venv", "migrations"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]
