[project]
name = "LumaireJ"
version = "0.1.0"
description = "A journaling app for emotional self-awareness and reflection"
authors = [
    {name = "Darli Ro", email = "glicerinn@gmail.com"},
]
requires-python = "==3.14.*"
readme = "README.md"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "python-dotenv",
    "sqlmodel",
    "psycopg[binary]"
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.main:app --reload"
lint = "ruff check ."
format = "ruff format ."
test = "pytest --cov=app --cov-report=term-missing"
dbrevision = "alembic -c pyproject.toml revision --autogenerate"
dbupgrade  = "alembic -c pyproject.toml upgrade head"

[dependency-groups]
dev = [
    "alembic",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4
exclude = ["__pypackages__", ".venv", "alembic/versions"]

[tool.ruff.lint]
select = [
    "E","F","I","N","UP","B","C4","SIM",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.alembic]
script_location = "alembic"
path_separator = "os"
prepend_sys_path = ["."]
